--- a/ion.css
+++ b/ion.css
@@ -25,7 +25,30 @@ h4 {text-align: center;}
     margin: auto;
     background: #EFEFEF;
     border-radius: 5px;
-    border: 2px solid black;    
+    border: 2px solid black;  
+
+    justify-content: space-between;  
+}
+
+/* wrap 3 is for the gibbs range function styles*/
+#wrap3 {
+    text-align: center;
+    width: 720px;
+    height: 125px;
+    margin: auto;
+    background: #EFEFEF;
+    border-radius: 5px;
+    border: 2px solid black;  
+    position: relative;
+    justify-content: space-between;  
+}
+
+#wrap2 {
+    text-align: center;
+    width: 800px;
+    margin: auto;
+    border-radius: 5px;
+    border: 2px solid white;    
 }
 
 #header {
@@ -44,6 +67,7 @@ label{
     padding:5px;
     font-size: 16px;
     margin: 10px;
+    align-items: center;
 }
 
 .one {
@@ -70,12 +94,23 @@ input[tpye=number] {
 } 
 
 #fd1 {
-    height: 250px;
+    height: 252px;
     margin: auto;
 }
 
 #fd2 {
-    height: 250px;
+    height: 252px;
+    margin: auto;
+}
+
+#fd3 {
+    height: 95px;
+    align-items: center;
+    margin: auto;
+}
+
+#fd4 {
+    height: 95px;
     margin: auto;
 }
 
@@ -87,12 +122,29 @@ input[tpye=number] {
     height: 240px;
 }
 
-.right {
+.bottom-left {
+    padding:5px;
+    /*display: inline-block;*/
+    width:350px;
+    float:left;
+    height: 240px;
+}
+
+.bottom-right {
     padding:5px;
     display: inline-block;
     width:350px;
     float:left;
     height: 240px;
+}
+
+.right {
+    padding: 5px;
+    display: inline-block;
+    width: 350px;
+    float: right; /* Adjusted float property */
+    height: 240px;
+    clear: right; /* Added clear property */
 }
 
 button {
@@ -102,4 +154,13 @@ button {
     height: 25px;
     border-radius: 3px;
     font-size:14px;
+}
+
+#buttons {
+    margin: 0px auto;
+    width: 300px;
+    padding: 5px;
+    border: 1px transparent solid;
+    text-align:center;
+    position: relative;
 }
