--- a/ion.css
+++ b/ion.css
@@ -43,13 +43,28 @@ h4 {text-align: center;}
     justify-content: space-between;  
 }
 
+
 #wrap2 {
-    text-align: center;
-    width: 800px;
+    text-align: left;
+    width: 700px;
     margin: auto;
     border-radius: 5px;
     border: 2px solid white;    
 }
+
+
+#stepTableWrapper {
+    border-radius: 5px; /* Add the border-radius to the wrapper div */
+    overflow: hidden; /* Optional, hides any content that might overflow from the table */
+}
+
+#stepTable table {
+    border-collapse: collapse; /* This property is needed to apply border-radius */
+    border-spacing: 0; /* Optional, it removes the spacing between table cells */
+    border-radius: 5px; /* Add the border-radius to the table */
+    overflow: hidden; /* Optional, hides any content that might overflow from the table cells */
+}
+
 
 #header {
     width:200px;  
@@ -164,3 +179,14 @@ button {
     text-align:center;
     position: relative;
 }
+
+.innerTable {
+    border-collapse: collapse;
+    width: 700px;
+    align-self: left;
+}
+
+
+.innerTable th { background-color:#000;color:white;width:50%; }
+.innerTable td, .innerTable th { padding:5px;border:1px solid #000; }
+
