latest update, no big changes, should work fine

--- a/ion.css
+++ b/ion.css
@@ -178,6 +178,7 @@ button {
     border: 1px transparent solid;
     text-align:center;
     position: relative;
+    height: 100px;
 }
 
 .innerTable {
