--- a/ion.css
+++ b/ion.css
@@ -37,12 +37,11 @@ h4 {text-align: center;}
 #wrap3 {
     text-align: center;
     width: 720px;
-    height: 320px;
+    height: 410px;
     margin: auto;
     background: #fbeec4;
     border-radius: 5px;
     border: 2px solid black;  
-    position: absolute;
     justify-content: space-between;
 }
 
@@ -99,6 +98,9 @@ label{
     width:150px;
 }
 
+.two2 {
+    width:53px;
+}
 
 #copy {
     text-align:center;
@@ -119,12 +121,12 @@ input[tpye=number] {
 }
 
 #fd2 {
-    height: 200px;
+    height: 205px;
     margin: auto;
 }
 
 #fd3 {
-    height: 100px;
+    height: 175px;
     align-items: center;
     margin: auto;
 }
@@ -138,8 +140,16 @@ input[tpye=number] {
     height: 83px;
     align-items: center;
     margin: auto;
-    transform: translate(0,-125px);
+    /* transform: translate(0,-65px); */
 }
+
+#fd6 {
+    height: 83px;
+    width: 1000px;
+    align-items: center;
+    margin: auto;
+}
+
 
 .left {
     padding:5px;
@@ -154,7 +164,7 @@ input[tpye=number] {
     /*display: inline-block;*/
     width:350px;
     float:left;
-    height: 240px;
+    /* height: 240px; */
 }
 
 .bottom-right {
@@ -162,7 +172,7 @@ input[tpye=number] {
     display: inline-block;
     width:350px;
     float:left;
-    height: 240px;
+    /* height: 240px; */
 }
 
 .right {
@@ -191,7 +201,7 @@ button {
     text-align:center;
     position: relative;
     height: 1px;
-    transform: translate(180px, 152px);
+    /* transform: translate(180px, 152px); */
 }
 
 .buttons2 {
@@ -200,7 +210,7 @@ button {
     padding: 5px;
     text-align:center;
     position: relative;
-    transform: translate(-7px, -350%);
+    /*transform: translate(-7px, -350%);*/
     height: 10px;
 }
 
@@ -228,3 +238,46 @@ button {
     margin: auto;
 
 }
+
+
+
+
+
+/* Style the tab */
+.tab {
+    overflow: hidden;
+    border: 1px solid #ccc;
+    background-color: #fbeec4;
+  }
+  
+  /* Style the buttons inside the tab */
+  .tab button {
+    background-color: inherit;
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    transition: 0.3s;
+    font-size: 17px;
+    width: 200px;
+    height: 40px;
+  }
+  
+  /* Change background color of buttons on hover */
+  .tab button:hover {
+    background-color: #ddd;
+  }
+  
+  /* Create an active/current tablink class */
+  .tab button.active {
+    background-color: #f6eed1;
+  }
+  
+  /* Style the tab content */
+  .tabcontent {
+    display: none;
+    padding: 6px 12px;
+    border: 1px solid #ccc;
+    border-top: none;
+  }
