--- a/ion.css
+++ b/ion.css
@@ -37,7 +37,7 @@ h4 {text-align: center;}
 #wrap3 {
     text-align: center;
     width: 720px;
-    height: 300px;
+    height: 320px;
     margin: auto;
     background: #fbeec4;
     border-radius: 5px;
@@ -302,7 +302,8 @@ button {
   /* Style the tab content */
   .tabcontent {
     display: none;
-    padding: 6px 12px;
+    /*padding: -10px 0px;*/
     border: 1px solid #ccc;
     border-top: none;
   }
+
