--- a/ion.css
+++ b/ion.css
@@ -69,6 +69,22 @@ h4 {text-align: center;}
     overflow: hidden; /* Optional, hides any content that might overflow from the table cells */
 }
 
+#stepTable2Wrapper {
+    border-radius: 5px; /* Add the border-radius to the wrapper div */
+    overflow: hidden; /* Optional, hides any content that might overflow from the table */
+}
+
+#stepTable2 table {
+    width: 50%;
+    margin-left: 25%;
+    align-items: center;
+    align-self: center;
+    border-collapse: collapse; /* This property is needed to apply border-radius */
+    border-spacing: 0; /* Optional, it removes the spacing between table cells */
+    border-radius: 5px; /* Add the border-radius to the table */
+    overflow: hidden; /* Optional, hides any content that might overflow from the table cells */
+}
+
 
 #header {
     width:200px;  
